--- a/package.json
+++ b/package.json
@@ -127,6 +127,8 @@
     "intl-locales-supported": "^1.0.0",
     "invariant": "^2.2.2",
     "lodash": "^4.17.4",
+    "material-ui": "^1.0.0-beta.23",
+    "material-ui-icons": "^1.0.0-beta.17",
     "moment": "^2.19.1",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
@@ -148,6 +150,7 @@
     "reselect": "^3.0.1",
     "sanitize.css": "^5.0.0",
     "stacktrace-js": "^2.0.0",
+    "typeface-roboto": "^0.0.45",
     "warning": "^3.0.0"
   }
 }
